README: add instructions to setup password managers

--- a/README.org
+++ b/README.org
@@ -10,6 +10,10 @@ account. It is still WIP. Expect breaking changes until the first release.
 * Table of Contents                                            :TOC:noexport:
 - [[#dependencies][Dependencies]]
 - [[#installation][Installation]]
+- [[#initiating-password-managers][Initiating password managers]]
+  - [[#pass][pass]]
+  - [[#pash][pash]]
+  - [[#pm][pm]]
 - [[#usage][Usage]]
   - [[#emacs-configuration][Emacs Configuration]]
   - [[#domains-file][Domains file]]
@@ -41,6 +45,41 @@ package [[https://aur.archlinux.org/packages/mu-wizard-git][mu-wizard-git]]. Thi
 
 #+BEGIN_SRC sh
   yay -S mu-wizard-git
+#+END_SRC
+
+* Initiating password managers
+
+All of the password managers require some sort of initializing before you can
+store your passwords. This must be done *before* you run ~muw~ for the first
+time. You will need to have a GnuPG key for all of the password managers
+supported by ~muw~. You can create a GPG key by running ~gpg --gen-key~, or
+~gpg --full-gen-key~.
+
+See the documentation of your password manager for more information on setting
+up your password manager, below are simple instructions enough to get you going.
+
+** pass
+
+In order to initiate pass, do the following:
+
+#+BEGIN_SRC sh
+  pass init yourgpgmail@example.com
+#+END_SRC
+
+** pash
+
+In order to use pash, add the following to your =.bashrc= (or what have you):
+
+#+BEGIN_SRC sh
+  export PASH_KEYID=yourgpgmail@example.com
+#+END_SRC
+
+** pm
+
+In order to use pm, add the following to your =.bashrc= (or what have you):
+
+#+BEGIN_SRC sh
+  export PM_GPG_USER=yourgpgmail@example.com
 #+END_SRC
 
 * Usage
