--- a/man/muw.1
+++ b/man/muw.1
@@ -1,4 +1,4 @@
-.Dd Apr 13, 2021
+.Dd Jun 02, 2021
 .Dt muw 1
 .Sh NAME
 .Nm muw
@@ -52,5 +52,7 @@ this program.  If not, see
 .Lk https://www.gnu.org/licenses/ .
 .Sh SEE ALSO
 .Xr muw-add 1
+.Xr muw-delete 1
+.Xr muw-sync 1
 .Xr mbsync  1
 .Xr msmtp   1
