--- a/README.org
+++ b/README.org
@@ -15,11 +15,13 @@ account. It is still WIP. Expect breaking changes until the first release.
   - [[#emacs-configuration][Emacs Configuration]]
   - [[#domains-file][Domains file]]
   - [[#overrides][Overrides]]
+- [[#configuration][Configuration]]
+  - [[#forcing-a-password-manager][Forcing a password manager]]
+  - [[#setting-notification-program][Setting notification program]]
 - [[#notes][Notes]]
   - [[#isync-deprecation-notice][Isync Deprecation Notice]]
   - [[#protonmail][Protonmail]]
   - [[#google][Google]]
-  - [[#forcing-a-password-manager][Forcing a password manager]]
 
 * Dependencies
 
@@ -135,6 +137,31 @@ Domain-level overrides are possible by adding a shell file to either the share
 directory or the user configuration directory. See [[file:overrides/protonmail.com][overrides/protonmail.com]]
 for an example override.
 
+* Configuration
+
+=mu-wizard= is mostly configured through environment variables. You can set
+these variables on your =.bashrc= (or other relevant shell configuration file).
+
+** Forcing a password manager
+
+Using the =$MUW_PWM= environment variable, you can specify which password
+manager to use. If you don't specify a password manager, ~muw~ will use it with
+the following order:
+
+1. ~pass~
+2. ~pash~
+3. ~pm~
+
+** Setting notification program
+
+=mu-wizard= supports ~notify-send~ (from =libnotify=) and [[https://github.com/dudik/herbe][herbe]] for sending
+mail notifications. You can set the =$MUW_NOTIFY= environment variables to the
+following:
+
+1. ~libnotify~
+2. ~herbe~
+3. ~disabled~ (self-explanatory)
+
 * Notes
 
 ** Isync Deprecation Notice
@@ -168,13 +195,3 @@ Keep in mind that you will need protonmail bridge in order to send mails.
 
 Google requires you to enable less-secure access in order to receive mail. See
 [[https://support.google.com/accounts/answer/6010255][here]] for more information.
-
-** Forcing a password manager
-
-Using the =$MUW_PWM= environment variable, you can specify which password
-manager to use. If you don't specify a password manager, ~muw~ will use it with
-the following order:
-
-1. ~pass~
-2. ~pash~
-3. ~pm~
